# qp42frames

./: .travis.yml  CMakeLists.txt  Clip.cpp  Clip.h  Embed.h  Frame.cpp  Frame.h  Matrix.cpp  Matrix.h  main.cpp
